apps/logs/error.txt
2016-11-26 09:57:51.557138 WARNING ------------------------------------------------------------
2016-11-26 09:57:51.557692 WARNING Unexpected error during loading of lock.py:
2016-11-26 09:57:51.558121 WARNING ------------------------------------------------------------
2016-11-26 09:57:51.564730 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 675, in readApp
    conf.modules[module_name] = importlib.import_module(module_name)
  File "/usr/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 2254, in _gcd_import
  File "<frozen importlib._bootstrap>", line 2237, in _find_and_load
  File "<frozen importlib._bootstrap>", line 2226, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1200, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 1129, in _exec
  File "<frozen importlib._bootstrap>", line 1467, in exec_module
  File "<frozen importlib._bootstrap>", line 1572, in get_code
  File "<frozen importlib._bootstrap>", line 1532, in source_to_code
  File "<frozen importlib._bootstrap>", line 321, in _call_with_frames_removed
  File "/home/hass/.homeassistant/apps/lock.py", line 28
    def lock(self):
      ^
IndentationError: expected an indented block

2016-11-26 09:57:51.565231 WARNING ------------------------------------------------------------
2016-11-26 09:58:17.364913 WARNING ------------------------------------------------------------
2016-11-26 09:58:17.371290 WARNING Unexpected error during loading of lock.py:
2016-11-26 09:58:17.376525 WARNING ------------------------------------------------------------
2016-11-26 09:58:17.382600 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 675, in readApp
    conf.modules[module_name] = importlib.import_module(module_name)
  File "/usr/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 2254, in _gcd_import
  File "<frozen importlib._bootstrap>", line 2237, in _find_and_load
  File "<frozen importlib._bootstrap>", line 2226, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1200, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 1129, in _exec
  File "<frozen importlib._bootstrap>", line 1467, in exec_module
  File "<frozen importlib._bootstrap>", line 1572, in get_code
  File "<frozen importlib._bootstrap>", line 1532, in source_to_code
  File "<frozen importlib._bootstrap>", line 321, in _call_with_frames_removed
  File "/home/hass/.homeassistant/apps/lock.py", line 28
    def lock(self):
      ^
IndentationError: expected an indented block

2016-11-26 09:58:17.383551 WARNING ------------------------------------------------------------
2016-11-26 09:59:47.927371 WARNING ------------------------------------------------------------
2016-11-26 09:59:47.927935 WARNING Unexpected error:
2016-11-26 09:59:47.928241 WARNING ------------------------------------------------------------
2016-11-26 09:59:47.928765 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 09:59:47.929069 WARNING ------------------------------------------------------------
2016-11-26 11:13:02.530537 WARNING ------------------------------------------------------------
2016-11-26 11:13:02.530974 WARNING Unexpected error:
2016-11-26 11:13:02.531686 WARNING ------------------------------------------------------------
2016-11-26 11:13:02.538306 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
  File "/home/hass/.homeassistant/apps/lock.py", line 30, in unlock
    self.call_service("lock.unlock", entity_id=self.lock)
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appapi.py", line 248, in call_service
    self._check_service(service)
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appapi.py", line 34, in _check_service
    raise ValueError("Invalid Service Name: {}".format(service))
ValueError: Invalid Service Name: lock.unlock

2016-11-26 11:13:02.538883 WARNING ------------------------------------------------------------
2016-11-26 11:13:04.390655 WARNING ------------------------------------------------------------
2016-11-26 11:13:04.391209 WARNING Unexpected error:
2016-11-26 11:13:04.391615 WARNING ------------------------------------------------------------
2016-11-26 11:13:04.392251 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:13:04.392649 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.665861 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.666436 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.666750 WARNING Unexpected error:
2016-11-26 11:22:49.667190 WARNING Unexpected error:
2016-11-26 11:22:49.667686 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.668164 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.668945 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:22:49.669686 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:22:49.669997 WARNING ------------------------------------------------------------
2016-11-26 11:22:49.670402 WARNING ------------------------------------------------------------
2016-11-26 11:29:09.743837 WARNING ------------------------------------------------------------
2016-11-26 11:29:09.744393 WARNING Unexpected error:
2016-11-26 11:29:09.744820 WARNING ------------------------------------------------------------
2016-11-26 11:29:09.745459 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:29:09.745858 WARNING ------------------------------------------------------------
2016-11-26 11:29:12.252202 WARNING ------------------------------------------------------------
2016-11-26 11:29:12.252730 WARNING Unexpected error:
2016-11-26 11:29:12.253119 WARNING ------------------------------------------------------------
2016-11-26 11:29:12.253746 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:29:12.254135 WARNING ------------------------------------------------------------
2016-11-26 11:32:21.756458 WARNING ------------------------------------------------------------
2016-11-26 11:32:21.757005 WARNING Unexpected error:
2016-11-26 11:32:21.757496 WARNING ------------------------------------------------------------
2016-11-26 11:32:21.758158 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:32:21.758627 WARNING ------------------------------------------------------------
2016-11-26 11:32:25.885951 WARNING ------------------------------------------------------------
2016-11-26 11:32:25.886579 WARNING Unexpected error:
2016-11-26 11:32:25.887028 WARNING ------------------------------------------------------------
2016-11-26 11:32:25.887766 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 424, in worker
    function(entity, attr, old_state, new_state, ha.sanitize_state_kwargs(args["kwargs"]))
TypeError: 'str' object is not callable

2016-11-26 11:32:25.888190 WARNING ------------------------------------------------------------
2016-11-27 22:05:00.009632 WARNING ------------------------------------------------------------
2016-11-27 22:05:00.010573 WARNING Unexpected error:
2016-11-27 22:05:00.011155 WARNING ------------------------------------------------------------
2016-11-27 22:05:00.015314 WARNING Traceback (most recent call last):
  File "/usr/local/lib/python3.4/dist-packages/appdaemon/appdaemon.py", line 418, in worker
    function(ha.sanitize_timer_kwargs(args["kwargs"]))
  File "/home/hass/.homeassistant/apps/schedule.py", line 61, in turn_off_cb
    if start < now < end:
TypeError: unorderable types: datetime.time() < datetime.datetime()

2016-11-27 22:05:00.016176 WARNING ------------------------------------------------------------
